--- a/admin/src/app/components/home/home.component.html
+++ b/admin/src/app/components/home/home.component.html
@@ -40,7 +40,7 @@
           <h4 class="text-section">Components</h4>
         </li>
         <li class="nav-item">
-          <a [routerLink]="['/admin/roomtype-main']" class="nav-link">
+          <a [routerLink]="['/admin/main-room-class']" class="nav-link">
             <i class="fas fa-bars"></i>
             <p>Quản lí LPC</p>
             <!-- <span class="caret"></span> -->
