--- a/frontend/src/app/page.module.css
+++ b/frontend/src/app/page.module.css
@@ -42,23 +42,27 @@
   font-size: 3rem;
   font-weight: bold;
 }
-.text{
+
+.text {
   width: 100%;
   white-space: nowrap;
   overflow: hidden;
   animation: typing 2.5s steps(22);
   cursor: .4s step-end infinite alternate;
 }
+
 @keyframes typing {
   from {
     width: 0;
   }
 }
+
 @keyframes cursor {
   50% {
     border-color: transparent;
   }
 }
+
 .btnBooking {
   width: 130px;
 }
@@ -182,16 +186,37 @@
 /* DỊCH VỤ KHÁCH SẠN Styles */
 .serviceCard {
   position: relative;
-  background-color: #2a2f4a;
+  background-color: transparent;
+  min-height: 360px;
   border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
   overflow: hidden;
   height: 200px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.18);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .serviceCard:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  box-shadow:
+    0 1px 10px 0 rgba(95, 94, 94, 0.85),   /* bóng đen đậm và rộng */
+    0 1px 10px 0 rgba(255, 255, 255, 0.18); /* bóng vàng nhạt tạo chiều sâu */
+}
+.serviceCard:hover .serviceImage {
+  transform: scale(1.07);
+  transition: transform 0.4s cubic-bezier(0.4,0,0.2,1);
+}
+.serviceCard button {
+  height: 40px;
+  border: 1px solid #FAB320;
+  border-radius: 8px;
+  background-color: transparent;
+  color: #FAB320;
+}
+
+.serviceCard button:hover {
+  background-color: #FAB320;
+  color: black;
+  transition: background-color 0.3s ease;
 }
 
 .serviceImage {
@@ -201,8 +226,14 @@
   width: 100%;
   height: 100%;
   z-index: 1;
+  z-index: 1;
+  transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+:global(.swiper-button-next):after,
+:global(.swiper-button-prev):after {
+  font-size: 1.8rem;
+  color: #FAB320;
+}
 .serviceOverlay {
   position: absolute;
   top: 0;
