--- a/admin/src/app/components/home/home.component.html
+++ b/admin/src/app/components/home/home.component.html
@@ -95,6 +95,13 @@
           </a>
         </li>
         <li class="nav-item">
+          <a [routerLink]="['/admin/comment']" class="nav-link">
+            <i class="fas fa-table"></i>
+            <p>Quản lí bình luận</p>
+            <!-- <span class="caret"></span> -->
+          </a>
+        </li>
+        <li class="nav-item">
           <a href="../../documentation/index.html">
             <i class="fas fa-file"></i>
             <p>Quản lí đánh giá</p>
