--- a/frontend/src/app/roomdetail/[roomId]/roomDetail.module.css
+++ b/frontend/src/app/roomdetail/[roomId]/roomDetail.module.css
@@ -555,6 +555,22 @@
   flex-direction: column;
   animation: slideInRight 0.35s cubic-bezier(.4,0,.2,1);
 }
+.faqAnswer {
+  max-height: 0;
+  opacity: 0;
+  transform: translateY(-10px);
+  overflow: hidden;
+  transition:
+    max-height 0.9s cubic-bezier(0.4,0,0.2,1),
+    opacity 0.7s,
+    transform 0.7s;
+}
+
+.faqAnswer.open {
+  max-height: 800px; /* đủ lớn cho mọi nội dung */
+  opacity: 1;
+  transform: translateY(0);
+}
 
 @keyframes slideInRight {
   from {
@@ -603,4 +619,4 @@
 }
 .customTextarea::placeholder {
   color: white;
-} 
+}
