--- a/admin/src/app/components/admin/main-room-class/main-room-class.component.html
+++ b/admin/src/app/components/admin/main-room-class/main-room-class.component.html
@@ -60,8 +60,7 @@
     <div (click)="onViewDetail(rtm)" style="cursor: pointer">{{ rtm.name }}</div>
     <div>{{ rtm.description }}</div>
     <div class="image-list">
-      <img *ngFor="let img of rtm.images ?? []" [src]="'http://localhost:8000/' + img.url" alt="Hình ảnh"
-        width="200" />
+      <img *ngFor="let img of rtm.images ?? []" [src]="'http://localhost:8000/' + img.url" alt="Hình ảnh" width="200" />
     </div>
     <div>
       <ul class="room-children-list">
@@ -149,7 +148,7 @@
 
         <div class="popup-section">
           <label for="images">Ảnh (URL):</label>
-          <input type="file" id="images" name="images" [(ngModel)]="editImageUrl" placeholder="Nhập URL ảnh" />
+          <input type="file" id="images" name="images" (change)="onEditFileSelected($event)" />
         </div>
 
         <div class="popup-actions">
