--- a/admin/src/app/components/admin/main-room-class/main-room-class.component.scss
+++ b/admin/src/app/components/admin/main-room-class/main-room-class.component.scss
@@ -237,7 +237,7 @@
       }
     }
   }
-  // popup xem
+  // popup
   .popup-overlay {
   position: fixed;
   top: 0; left: 0; right: 0; bottom: 0;
