--- a/admin/src/app/components/admin/room-class-list/room-class-list.component.html
+++ b/admin/src/app/components/admin/room-class-list/room-class-list.component.html
@@ -74,7 +74,7 @@
     <div>STT</div>
     <div>Tên</div>
     <div>Số giường</div>
-    <div>Mô tả</div>
+    <!-- <div>Mô tả</div> -->
     <div>View</div>
     <div>Sức chứa (người)</div>
     <div>Giá</div>
@@ -90,7 +90,7 @@
     <!-- <div>{{ rc.name }}</div> -->
     <div (click)="onViewDetail(rc)" style="cursor: pointer">{{ rc.name }}</div>
     <div>{{ rc.bed_amount }}</div>
-    <div>{{ rc.description }}</div>
+    <!-- <div>{{ rc.description }}</div> -->
     <div>{{ rc.view }}</div>
     <div>{{ rc.capacity }}</div>
     <div>{{ rc.price | currency: 'VND':'symbol' }}</div>
