--- a/admin/src/app/components/sidebar/sidebar.component.html
+++ b/admin/src/app/components/sidebar/sidebar.component.html
@@ -72,21 +72,21 @@
           </a>
         </li>
         <li class="nav-item">
-          <a data-bs-toggle="collapse" href="#maps">
+           <a [routerLink]="['/admin/employee']" class="nav-link">
             <i class="fas fa-map-marker-alt"></i>
             <p>Quản lí nhân viên</p>
             <!-- <span class="caret"></span> -->
           </a>
         </li>
         <li class="nav-item">
-          <a data-bs-toggle="collapse" href="#charts">
+           <a [routerLink]="['/admin/service']" class="nav-link">
             <i class="far fa-chart-bar"></i>
             <p>Quản lí dịch vụ</p>
             <!-- <span class="caret"></span> -->
           </a>
         </li>
         <li class="nav-item">
-          <a href="widgets.html">
+           <a [routerLink]="['/admin/discount']" class="nav-link">
             <i class="fas fa-desktop"></i>
             <p>Quản lí khuyến mãi</p>
             <!-- <span class="caret"></span> -->
